<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Count"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_display"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv_display"
    />
    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/add_bt_text"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/b_add"
    />
    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/sub_bt_text"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/b_sub"
    />
</LinearLayout>